jpms handling embedded deps